--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "koa-logger": "^3.2.0",
     "koa-router": "^7.4.0",
     "koa-static": "^4.0.2",
-    "koa2-cors": "^2.0.5"
+    "koa-static-plus": "^0.1.1",
+    "koa2-cors": "^2.0.5",
+    "path": "^0.12.7"
   }
 }
