--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "koa-static": "^4.0.2",
     "koa-static-plus": "^0.1.1",
     "koa2-cors": "^2.0.5",
+    "mockjs": "^1.0.1-beta3",
     "path": "^0.12.7"
   }
 }
